# MCP_Integration_with_agents

./: .gitignore  README.md  agent.py  client.py  config.py  cred.py  database.py  logger_config.py  main.py  mcp_server.py  prompts.py  pyproject.toml  requirements.txt
