[project]
name = "tools-integration-with-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.3",
    "langchain==1.2.2",
    "langchain-core==1.2.6",
    "langchain-google-genai==4.1.3",
    "langchain-mcp-adapters>=0.2.1",
    "python-dotenv==1.2.1",
]
